// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Checkout renders correctly for "/delivery" route 1`] = `
Array [
  .c3 {
  background: #ffffff;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left: 1px solid #b0b0b0;
}

.c2:last-child {
  border-right: 1px solid #b0b0b0;
}

.c0 {
  width: 100%;
  border-bottom: 1px solid #b0b0b0;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 6rem;
}

.c4 {
  font-weight: 400;
  padding-right: 0.4rem;
}

@media (max-width:48em) {
  .c2:first-child {
    border-left: 0;
  }

  .c2:last-child {
    border-right: 0;
  }
}

@media (max-width:48em) {
  .c1 {
    padding: 0;
  }
}

<div
    className="c0"
  >
    <nav
      className="c1"
    >
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/delivery"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            1.
          </span>
          Delivery
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/payment"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            2.
          </span>
          Payment
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/review"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            3.
          </span>
          Review
        </span>
      </a>
    </nav>
  </div>,
  .c0 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.c2 {
  border: 0;
  background: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 2rem;
  min-height: 2rem;
}

.c4 {
  background: #00a09f;
  color: #ffffff;
  display: block;
  font-size: 700;
  font-weight: 600;
  padding: 1.2rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 96rem;
  margin: 0 auto;
}

.c3 {
  bottom: 0;
  left: 0;
  padding: 1rem;
  position: fixed;
  width: 100%;
  background: #ffffff;
  border-top: 1px solid #b0b0b0;
  z-index: 6000;
}

.c1 {
  font-size: 1.2rem;
  text-align: left;
  margin-top: 10px;
  margin-bottom: 10px;
  text-transform: uppercase;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<article
    className="c0"
  >
    <section>
      <h3
        className="c1"
      >
        Shipping Address
        <button
          className="c2"
          data-testid="modal-trigger"
          onClick={[Function]}
        >
          <svg
            height="18"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="9"
              cy="9"
              fill="#222"
              r="9"
            />
            <path
              d="M9.833 6.241H8.167V4.724h1.666v1.517zM8.167 7.49h1.666v5.786H8.167V7.49z"
              fill="#fff"
            />
          </svg>
        </button>
      </h3>
    </section>
    <div
      className="c3"
    >
      <a
        className="c4"
        data-testid="next-step-button"
        href="/checkout/payment"
        onClick={[Function]}
      >
        Continue to Payment
      </a>
    </div>
  </article>,
]
`;

exports[`COMPONENT - Checkout renders correctly for "/payment" route 1`] = `
Array [
  .c3 {
  background: #ffffff;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left: 1px solid #b0b0b0;
}

.c2:last-child {
  border-right: 1px solid #b0b0b0;
}

.c0 {
  width: 100%;
  border-bottom: 1px solid #b0b0b0;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 6rem;
}

.c4 {
  font-weight: 400;
  padding-right: 0.4rem;
}

@media (max-width:48em) {
  .c2:first-child {
    border-left: 0;
  }

  .c2:last-child {
    border-right: 0;
  }
}

@media (max-width:48em) {
  .c1 {
    padding: 0;
  }
}

<div
    className="c0"
  >
    <nav
      className="c1"
    >
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/delivery"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            1.
          </span>
          Delivery
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/payment"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            2.
          </span>
          Payment
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/review"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            3.
          </span>
          Review
        </span>
      </a>
    </nav>
  </div>,
  .c0 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.c8 {
  background: #00a09f;
  color: #ffffff;
  display: block;
  font-size: 700;
  font-weight: 600;
  padding: 1.2rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 96rem;
  margin: 0 auto;
}

.c7 {
  bottom: 0;
  left: 0;
  padding: 1rem;
  position: fixed;
  width: 100%;
  background: #ffffff;
  border-top: 1px solid #b0b0b0;
  z-index: 6000;
}

.c2 {
  font-size: 1.2rem;
  text-align: left;
  margin-top: 10px;
  margin-bottom: 10px;
  text-transform: uppercase;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #00a09f;
}

.c5:last-child {
  margin-bottom: 0;
}

.c3 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3:last-child {
  margin-bottom: 0;
}

.c4 {
  font-size: 1.8rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4:last-child {
  margin-bottom: 0;
}

.c6 {
  font-size: 1.2rem;
  font-weight: 700;
}

.c1 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

<article
    className="c0"
  >
    <h1
      className="c1"
    >
      Payment
    </h1>
    <section>
      <h3
        className="c2"
      >
        Order Summary
      </h3>
      <p
        className="c3"
      >
        <span>
          Subtotal
        </span>
        <span>
          $125.00
        </span>
      </p>
      <p
        className="c3"
      >
        <span>
          Kohl's Cash & Discounts
        </span>
        <span>
          -$18.75
        </span>
      </p>
      <p
        className="c4"
      >
        <span>
          Shipping
        </span>
        <span>
          FREE
        </span>
      </p>
      <p
        className="c5"
      >
        You have earned free shipping.
      </p>
      <p
        className="c3"
      >
        <span>
          Tax
        </span>
        <span>
          $6.38
        </span>
      </p>
      <p
        className="c3"
      >
        <span
          className="c6"
        >
          TOTAL $
          122.7
        </span>
      </p>
      <p
        className="c3"
      >
        <span>
          Your Savings
        </span>
        <span>
          $122.70
        </span>
      </p>
    </section>
    <div
      className="c7"
    >
      <a
        className="c8"
        data-testid="next-step-button"
        href="/checkout/review"
        onClick={[Function]}
      >
        Review Order
      </a>
    </div>
  </article>,
]
`;

exports[`COMPONENT - Checkout renders correctly for "/review" route 1`] = `
Array [
  .c3 {
  background: #ffffff;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left: 1px solid #b0b0b0;
}

.c2:last-child {
  border-right: 1px solid #b0b0b0;
}

.c0 {
  width: 100%;
  border-bottom: 1px solid #b0b0b0;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 6rem;
}

.c4 {
  font-weight: 400;
  padding-right: 0.4rem;
}

@media (max-width:48em) {
  .c2:first-child {
    border-left: 0;
  }

  .c2:last-child {
    border-right: 0;
  }
}

@media (max-width:48em) {
  .c1 {
    padding: 0;
  }
}

<div
    className="c0"
  >
    <nav
      className="c1"
    >
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/delivery"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            1.
          </span>
          Delivery
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/payment"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            2.
          </span>
          Payment
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/review"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            3.
          </span>
          Review
        </span>
      </a>
    </nav>
  </div>,
  .c0 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.c8 {
  background: #00a09f;
  color: #ffffff;
  display: block;
  font-size: 700;
  font-weight: 600;
  padding: 1.2rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 96rem;
  margin: 0 auto;
}

.c7 {
  bottom: 0;
  left: 0;
  padding: 1rem;
  position: fixed;
  width: 100%;
  background: #ffffff;
  border-top: 1px solid #b0b0b0;
  z-index: 6000;
}

.c1 {
  font-size: 1.2rem;
  text-align: left;
  margin-top: 10px;
  margin-bottom: 10px;
  text-transform: uppercase;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #00a09f;
}

.c5:last-child {
  margin-bottom: 0;
}

.c3 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3:last-child {
  margin-bottom: 0;
}

.c4 {
  font-size: 1.8rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4:last-child {
  margin-bottom: 0;
}

.c6 {
  font-size: 1.2rem;
  font-weight: 700;
}

.c2 {
  color: #00a09f;
  font-weight: 700;
  font-size: 1.8rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: none;
}

<article
    className="c0"
  >
    <section>
      <h3
        className="c1"
      >
        Shipping Details
        <a
          className="c2"
          href="/checkout/delivery"
          onClick={[Function]}
        >
          Edit
        </a>
      </h3>
    </section>
    <section>
      <h3
        className="c1"
      >
        Payment Information
        <a
          className="c2"
          href="/checkout/payment"
          onClick={[Function]}
        >
          Edit
        </a>
      </h3>
    </section>
    <section>
      <h3
        className="c1"
      >
        Order Summary
      </h3>
      <p
        className="c3"
      >
        <span>
          Subtotal
        </span>
        <span>
          $125.00
        </span>
      </p>
      <p
        className="c3"
      >
        <span>
          Kohl's Cash & Discounts
        </span>
        <span>
          -$18.75
        </span>
      </p>
      <p
        className="c4"
      >
        <span>
          Shipping
        </span>
        <span>
          FREE
        </span>
      </p>
      <p
        className="c5"
      >
        You have earned free shipping.
      </p>
      <p
        className="c3"
      >
        <span>
          Tax
        </span>
        <span>
          $6.38
        </span>
      </p>
      <p
        className="c3"
      >
        <span
          className="c6"
        >
          TOTAL $
          122.7
        </span>
      </p>
      <p
        className="c3"
      >
        <span>
          Your Savings
        </span>
        <span>
          $122.70
        </span>
      </p>
    </section>
    <div
      className="c7"
    >
      <a
        className="c8"
        data-testid="next-step-button"
        href="/cart"
        onClick={[Function]}
      >
        Place Order
      </a>
    </div>
  </article>,
]
`;
